# AVX-CPP

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  LICENSE  README.md  int256.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml  deploy-docs.yml
cmake/: arithmetic-tests.cmake  avx-detect.cmake  deep-arithmetic-tests.cmake  perf-tests.cmake
docs/sphinx/: .buildinfo  .buildinfo.bak  about.html  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/sphinx/.doctrees/: about.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/sphinx/.doctrees/char256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/constants/: index.doctree
docs/sphinx/.doctrees/double256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/float256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/int256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/long256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/math/: index.doctree
docs/sphinx/.doctrees/short256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/uchar256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/uint256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/ulong256/: examples.doctree  index.doctree
docs/sphinx/.doctrees/ushort256/: examples.doctree  index.doctree
docs/sphinx/_sources/: about.rst.txt  index.rst.txt  quickstart.rst.txt
docs/sphinx/_sources/char256/: examples.rst.txt  index.rst.txt
docs/sphinx/_sources/int256/: examples.rst.txt  index.rst.txt
docs/sphinx/_sources/math/: index.rst.txt
docs/sphinx/_sources/short256/: examples.rst.txt
docs/sphinx/breathe/doxygen/: AVX_CPP.cfg
docs/sphinx/breathe/doxygen/AVX_CPP/xml/: Doxyfile.xml  char256_8cpp.xml  char256_8hpp.xml  classavx_1_1_char256.xml  classavx_1_1_double256.xml  classavx_1_1_float256.xml  classavx_1_1_int256.xml  classavx_1_1_long256.xml  classavx_1_1_short256.xml  classavx_1_1_u_char256.xml  classavx_1_1_u_int256.xml  classavx_1_1_u_long256.xml  classavx_1_1_u_short256.xml  constants_8hpp.xml  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  double256_8cpp.xml  double256_8hpp.xml  float256_8cpp.xml  float256_8hpp.xml  index.xml  int256_8cpp.xml  int256_8hpp.xml  long256_8cpp.xml  long256_8hpp.xml  namespaceavx.xml  namespaceavx_1_1constants.xml  short256_8cpp.xml  short256_8hpp.xml  uchar256_8cpp.xml  uchar256_8hpp.xml  uint256_8cpp.xml  uint256_8hpp.xml  ulong256_8cpp.xml  ulong256_8hpp.xml  ushort256_8cpp.xml  ushort256_8hpp.xml
docs/sphinx/char256/: examples.html  index.html
docs/sphinx/constants/: index.html
docs/sphinx/double256/: examples.html  index.html
docs/sphinx/float256/: examples.html  index.html
docs/sphinx/int256/: examples.html  index.html
docs/sphinx/long256/: examples.html  index.html
docs/sphinx/math/: index.html
docs/sphinx/short256/: examples.html  index.html
docs/sphinx/uchar256/: examples.html  index.html
docs/sphinx/uint256/: examples.html  index.html
docs/sphinx/ulong256/: examples.html  index.html
docs/sphinx/ushort256/: examples.html  index.html
sphinx-conf/: about.rst  conf.py  embed.html  index.rst  lab.ipynb  xml2rst.py
sphinx-conf/char256/: index.rst
sphinx-conf/constants/: index.rst
sphinx-conf/double256/: index.rst
sphinx-conf/float256/: index.rst
sphinx-conf/int256/: index.rst
sphinx-conf/long256/: index.rst
sphinx-conf/short256/: index.rst
sphinx-conf/uchar256/: index.rst
sphinx-conf/uint256/: index.rst
sphinx-conf/ulong256/: index.rst
sphinx-conf/ushort256/: index.rst
src/: avxmath.hpp  int256.cpp  int256.hpp  math.hpp  types.cpp  types.hpp
src/misc/: simd_ext_gcc.c  simd_ext_gcc.h
src/ops/: avxmath.cpp  avxmath.hpp
src/tests/: int_arithmetic_test.cpp  int_perf_tests.cpp  long_arithmetic_test.cpp  new_perf_tests.cpp  short_arithmetic_test.cpp  test_utils.hpp  uchar_arithmetic_test.cpp  uint_arithmetic_test.cpp  ulong_arithmetic_test.cpp  ushort_arithmetic_test.cpp
src/tests/arithmetic/: char_arithmetic_test.cpp  edge_cases_test.cpp  fp_arithmetic_test.cpp  int_arithmetic_test.cpp  long_arithmetic_test.cpp  short_arithmetic_test.cpp  uchar_arithmetic_test.cpp  uint_arithmetic_test.cpp  ulong_arithmetic_test.cpp  ushort_arithmetic_test.cpp
src/tests/deep/: char_test.cpp  int_test.cpp  long_test.cpp  short_test.cpp  uchar_test.cpp  uint_test.cpp  ulong_test.cpp  ushort_test.cpp
src/tests/include/: cpuinfo.cpp  cpuinfo.hpp  deep_tests.hpp  limits_tests.hpp  perf_utils.hpp  test_utils.hpp
src/tests/perf/: char_perf_tests.cpp  double_perf_tests.cpp  float_perf_tests.cpp  haversine_test.cpp  int_perf_tests.cpp  long_perf_tests.cpp  new_perf_tests.cpp  short_perf_tests.cpp  uchar_perf_tests.cpp  uint_perf_tests.cpp  ulong_perf_tests.cpp  ushort_perf_tests.cpp
src/types/: char256.cpp  char256.hpp  constants.hpp  double256.cpp  double256.hpp  float256.cpp  float256.hpp  int256.cpp  int256.hpp  long256.cpp  long256.hpp  short256.cpp  short256.hpp  uchar256.cpp  uchar256.hpp  uint256.cpp  uint256.hpp  ulong256.cpp  ulong256.hpp  ushort256.cpp  ushort256.hpp
